--- a/package.json
+++ b/package.json
@@ -23,16 +23,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "jest": "^29.5.0",
-
-    "nodemon": "^2.0.22"
-  },
-  "devDependencies": {
-    "jest": "^29.5.0",
-
     "nodemon": "^2.0.22",
     "swagger-ui-express": "^4.6.3"
   }
