--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
+    "eslint": "^8.41.0",
     "jest": "^29.5.0",
-
     "nodemon": "^2.0.22",
     "swagger-ui-express": "^4.6.3"
   }
