--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "swagger-ui-express": "^4.6.3"
