--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,14 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "swagger-ui-express": "^4.6.3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
