--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon app.js",
     "test": "jest --coverage",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -27,15 +28,16 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "swagger-ui-express": "^4.6.3"
   },
+  
   "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
-  }
+    "**/*.js": "prettier --write --ignore-unknown"
+    }
+   
 }
