--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon app.js",
     "test": "jest --coverage",
     "lint": "eslint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "precommit": "npm run lint"
   },
   "repository": {
     "type": "git",
