--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --coverage",
     "lint": "eslint .",
     "prepare": "husky install",
-    "precommit": "npm run dev"
+    "precommit": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,9 @@
     "eslint": "^8.41.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "swagger-ui-express": "^4.6.3"
   }
 }
