--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "jest --coverage",
-    "lint": "npm run tslint \"Client/**/*.ts\"",
-    "precommit": "npm run lint && npm test",
-    "prepush": "npm run lint"
-  },
+    "test": "jest --coverage"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/elemntorBootkamp/backend.git"
@@ -35,8 +32,7 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "swagger-ui-express": "^4.6.3"
-  },
-  "lint-staged": {
-    "**/*.js": "prettier --write --ignore-unknown"
   }
+ 
+
 }
