--- a/package.json
+++ b/package.json
@@ -27,18 +27,17 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "swagger-ui-express": "^4.6.3"
-  }
-  ,  
-    "husky": {
-      "hooks": {
-        "pre-commit": "npm run prettier && git add ."
-      }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier && git add ."
     }
-  
+  }
 }
