--- a/package.json
+++ b/package.json
@@ -25,16 +25,13 @@
     "forwarded": "^0.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-<<<<<<< Updated upstream
-    "winston": "^3.8.2"
-=======
+    "winston": "^3.8.2",
     "normalize-path": "^3.0.0",
     "readdirp": "^3.6.0",
     "side-channel": "^1.0.4",
     "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
     "underscore": "^1.13.6"
->>>>>>> Stashed changes
   },
   "devDependencies": {
     "jest": "^29.5.0",
