--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js",
     "test": "jest --coverage",
-    "lint": "eslint .",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "husky install",
     "precommit": "npm run lint",
     "e2e": "jest",
@@ -35,7 +35,7 @@
     "winston": "^3.9.0"
   },
   "devDependencies": {
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
