--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --coverage",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "husky install",
-    "pre-commit": "npm run lint",
+    "pre-commit": "npm run prettier",
     "e2e": "jest",
     "prettier": "prettier --write \"**/*.js\""
   },
