--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "forwarded": "^0.2.0",
     "ipaddr.js": "^2.1.0",
     "jest-puppeteer": "^9.0.0",
+    "keycloak-admin": "^1.14.22",
     "keycloak-connect": "^21.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
