--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,7 @@
     "singleQuote": true,
     "trailingComma": "all",
     "printWidth": 80,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "indent":true,
+    "quotes": true
   }
