--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jest-puppeteer": "^9.0.0",
+    "keycloak-admin": "^1.14.22",
+    "keycloak-connect": "^21.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "puppeteer": "^20.4.0",
