--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jest-puppeteer": "^9.0.0",
+    "jsonwebtoken": "^9.0.0",
     "keycloak-admin": "^1.14.22",
-    "keycloak-connect": "^21.1.1",
+    "keycloak-connect": "^21.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "puppeteer": "^20.4.0",
